syntax = "proto3";

package blog;

option go_package = "blog/protocolbuffer";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1; // will have the generated blog id in response
}

message ReadBlogRequest {
    string blog_id = 1;
}

message ReadBlogResponse {
    Blog blog = 1; // will have a blog id
}


service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse); // Need to return NOT FOUND, if not exists
}